<resources>
    <string name="app_name">ProductApplicationViewsKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">Home</string>
    <string name="search_product_string">Search Product</string>
    <string name="recommend_for_you">Recommend for You</string>
    <string name="see_more_btn">See More</string>
    <string name="filter_btn">Filter</string>
    <string name="filter_text">Filter</string>
    <string name="gender">Gender</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
</resources>